[gd_scene load_steps=21 format=3 uid="uid://bi2qe4oobl2sn"]

[ext_resource type="Script" path="res://Scenes/battle/battle.gd" id="1_6wx8r"]
[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_252cl"]
[ext_resource type="PackedScene" uid="uid://c0sqo6710gp6a" path="res://Scenes/enemy/enemy.tscn" id="2_1nqiv"]
[ext_resource type="Script" path="res://Scenes/ui/hand.gd" id="2_a3ibl"]
[ext_resource type="PackedScene" uid="uid://rhy33hdpjmja" path="res://Scenes/player/player.tscn" id="3_18sgq"]
[ext_resource type="PackedScene" uid="uid://c0ua65cj1rgjd" path="res://Scenes/card_target_selector/card_target_selector.tscn" id="3_c7tls"]
[ext_resource type="AudioStream" uid="uid://dpdenqqbovwfq" path="res://art/8_bit_iced_village_lofi.mp3" id="3_wqx5c"]
[ext_resource type="Resource" uid="uid://detjq7mf4v3s" path="res://characters/warrior/warrior.tres" id="4_gb6p2"]
[ext_resource type="Script" path="res://Scenes/enemy/enemy_handler.gd" id="4_ju7fd"]
[ext_resource type="Resource" uid="uid://5jdlvlg5seqr" path="res://enemies/crab_enemy/crab_enemy.tres" id="5_1vggr"]
[ext_resource type="Script" path="res://Scenes/ui/battle_ui.gd" id="7_vd0ve"]
[ext_resource type="Script" path="res://Scenes/player/player_handler.gd" id="8_bq3rw"]
[ext_resource type="Resource" uid="uid://dtbitpwwtc730" path="res://enemies/bat/bat_enemy.tres" id="8_mgkvq"]
[ext_resource type="Resource" uid="uid://b62cx4x16x14l" path="res://characters/quixley/quixley.tres" id="10_2i5e7"]
[ext_resource type="PackedScene" uid="uid://dr5fk60a0hroc" path="res://Scenes/ui/mana_ui.tscn" id="11_qywkf"]
[ext_resource type="PackedScene" uid="uid://c5dgxn1xfq33x" path="res://Scenes/ui/tooltip.tscn" id="12_pbv05"]
[ext_resource type="Theme" uid="uid://crldvrn5qplqv" path="res://main_theme.tres" id="13_5fbnv"]
[ext_resource type="Script" path="res://Scenes/ui/red_flash.gd" id="15_ijlv0"]
[ext_resource type="PackedScene" uid="uid://d2t3aqxhtt435" path="res://Scenes/ui/battle_over_panel.tscn" id="17_h3wy4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ed5pu"]
size = Vector2(256, 100)

[node name="Battle" type="Node2D"]
script = ExtResource("1_6wx8r")
char1_stats = ExtResource("10_2i5e7")
char2_stats = ExtResource("4_gb6p2")
char3_stats = ExtResource("4_gb6p2")
char4_stats = ExtResource("4_gb6p2")
music = ExtResource("3_wqx5c")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.34902, 0.34902, 0.34902, 1)
texture = ExtResource("1_252cl")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(128, 50)
shape = SubResource("RectangleShape2D_ed5pu")
debug_color = Color(0, 0.6, 0.701961, 0.0588235)

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("4_ju7fd")

[node name="BatEnemy" parent="EnemyHandler" instance=ExtResource("2_1nqiv")]
position = Vector2(157, 59)
stats = ExtResource("8_mgkvq")

[node name="CrabEnemy" parent="EnemyHandler" instance=ExtResource("2_1nqiv")]
position = Vector2(122, 87)
stats = ExtResource("5_1vggr")

[node name="BatEnemy2" parent="EnemyHandler" instance=ExtResource("2_1nqiv")]
position = Vector2(86, 58)
stats = ExtResource("8_mgkvq")

[node name="Player" parent="." instance=ExtResource("3_18sgq")]
position = Vector2(26, 115)
stats = ExtResource("10_2i5e7")

[node name="Player2" parent="." instance=ExtResource("3_18sgq")]
position = Vector2(26, 17)
stats = ExtResource("4_gb6p2")

[node name="Player3" parent="." instance=ExtResource("3_18sgq")]
position = Vector2(229, 18)
stats = ExtResource("4_gb6p2")

[node name="Player4" parent="." instance=ExtResource("3_18sgq")]
position = Vector2(228, 114)
stats = ExtResource("4_gb6p2")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_c7tls")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_bq3rw")
hand = NodePath("../BattleUI/Hand")
cards_per_turn = 5

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_vd0ve")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
alignment = 1
script = ExtResource("2_a3ibl")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_qywkf")]
offset_left = 54.0
offset_right = 72.0
char_stats = ExtResource("4_gb6p2")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_pbv05")]
offset_top = 6.0
offset_bottom = 42.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -19.0
offset_right = -48.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_5fbnv")
text = "End Turn"

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_ijlv0")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.443137, 0.443137, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_h3wy4")]
visible = false

[connection signal="child_order_changed" from="EnemyHandler" to="." method="_on_enemies_child_order_changed"]
